[tool.poetry]
name = "stringertheory"
version = "0.1.0"
description = ""
authors = ["stringertheory <mike.stringer.internet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
svgwrite = "^1.4.3"
astral = "^3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
